--- a/me/MECSS.css
+++ b/me/MECSS.css
@@ -1,189 +1,238 @@
-/* Style the navigation bar */
-.navbar {
+body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  }
+
+
+  .grid-container {
+    display: grid;
+    grid-template-rows: 1fr 5fr 1fr 5fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 90vh;
     width: 100%;
-    background-color: #3f3f3f;
-    overflow: auto;
   }
-  
-  /* Navbar links */
-  .navbar a {
-    float: left;
-    text-align: center;
+    
+  .header-container {
+    grid-column: 1/4;
+    grid-row: 1;
     padding: 12px;
-    color: white;
-    text-decoration: none;
-    font-size: 17px;
   }
   
-  /* Navbar links on mouse-over */
-  .navbar a:hover {
+  .main-container {
+    grid-column: 1/2;
+    grid-row: 2;
+    height: 70vh;
+    /* background-image: url(../Assets/fakepic.JPG); */
+    /* background-size: cover; */
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+  
+  .sidebar-container {
+    grid-column: 2/4;
+    grid-row: 2;
+    padding: 10px;
+    background-color: #ffffff;
+  }
+  
+  .logo-position {
+    float: left;
+  }
+  
+  .header-flex {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-top: 20px;
+  }
+  
+  nav a {
+    font-size: 20px;
+    color: #333;
+    font-weight: bold;
+    margin: 0 20px;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+    
+  .sidebar-title {
+    font-size: 30px;
+    font-weight: bold;
+    padding-left: 30px;
+    width: 400px;
+    border-bottom: 5px solid #333;
+  }
+  
+  .sidebar-tagline {
+    font-size: 20px;
+    line-height: 15px;
+    color: #333;
+    padding-left: 30px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  
+  .btn-spacing {
+    padding-left: 30px;
+    /* margin-top: 20px; */
+  }
+  
+  .sidebar-btn {
+    background-color: #333;
+    color: #ffffff;
+    /* margin-top: 15px; */
+    width: 200px;
+    height: 60px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+.sidebar-btn:hover {
+  background-color: #6291D0;
+}
+  
+  .sidebar-btn i {
+    color: #ffffff;
+  }
+  
+  .btn-flex{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .footer-container {
+    grid-column: 1/4;
+    grid-row: 3;
+    padding: 10px;
+    border-top: 60px solid #333;
+    margin-bottom: 10px;
+  }
+
+  .footer-flex {
+    display: flex;
+    direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  
+  .icons-flex {
+    display: flex;
+  }
+    
+  .square {
+    margin-right: 10px;
+  }
+  
+  a .square {
+    color: #333;
+  }
+  
+  a .square:hover {
+    color: #6291D0;
+  }
+  
+  /* 
+    The fontawesome instagram square icon doesn't work
+    We can make our own square icon with the help of CSS
+  */
+  .insta-box {
+    margin-top: 2px;
+    color: #fff;
+    background-color: #333;
+    width: 43px;
+    height: 43px;
+    border-radius: 3px;
+  }
+  
+  a .insta-box:hover {
     background-color: #6291D0;
   }
   
-    /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
-  @media screen and (max-width: 500px) {
-    .navbar a {
-      float: none;
-      display: block;
-    }
+  .insta {
+    color: #fff;
+    margin: 5px 0 0 7.5px;
   }
 
-body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    }
+  .box1 {
+    grid-column: 1/2;
+    grid-row: 4;
+    box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+    border-radius: 10px;
+    margin: 5px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
 
+.box2 {
+    grid-column: 2/3;
+    grid-row: 4;
+    box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+    border-radius: 10px;
+    margin: 5px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
+
+.box3 {
+    grid-column: 3/4;
+    grid-row: 4;
+    box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+    border-radius: 10px;
+    margin: 5px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
+
+.nested {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  align-items: center;
+}
   
-    .grid-container {
-      display: grid;
-      grid-template-rows: 1fr 5fr 1fr;
-      grid-template-columns: 40vw 60vw;
-      height: 90vh;
-      width: 100%;
-    }
-      
-    .header-container {
-      grid-column: 1/3;
-      grid-row: 1;
-      padding: 12px;
-    }
-    
-    .main-container {
-      grid-column: 1/2;
-      grid-row: 2;
-      height: 70vh;
-      background-image: url(../Assets/fakepic.JPG);
-      background-size: cover;
-      margin: 50px;
-    }
-    
-    .sidebar-container {
-      grid-column: 2/3;
-      grid-row: 2;
-      padding: 10px;
-      background-color: #ffffff;
-    }
-    
-    .footer-container {
-      grid-column: 1/3;
-      grid-row: 3;
-      padding: 10px;
-      border-top: 60px solid #333;
-    }
-    
-    .logo-position {
-      float: left;
-    }
-    
-    .header-flex {
-      display: flex;
-      justify-content: end;
-      align-items: center;
-      padding-top: 20px;
-    }
-    
-    nav a {
-      font-size: 20px;
-      color: #333;
-      font-weight: bold;
-      margin: 0 20px;
-    }
-    
-    a {
-      text-decoration: none;
-    }
-      
+h4 { 
+  border-top: #333 2px solid;
+  padding: 1em;
+  text-align: center;
+}
 
-    
-    .sidebar-accent {
-      text-transform: uppercase;
-      font-size: 16px;
-      color: #333;
-      padding: 30px 30px 10px 30px;
-    }
-    
-    .sidebar-title {
-      font-size: 50px;
-      font-weight: bold;
-      padding-left: 30px;
-      width: 400px;
-      border-bottom: 5px solid black;
-    }
-    
-    .sidebar-tagline {
-      font-size: 16px;
-      line-height: 25px;
-      color: #333;
-      padding-left: 30px;
-      margin-top: 50px;
-    }
-    
-    .btn-spacing {
-      padding-left: 30px;
-      margin-top: 20px;
-    }
-    
-    .sidebar-btn {
-      background-color: #6291D0;
-      color: #ffffff;
-      margin-top: 15px;
-      width: 200px;
-      height: 60px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    
-    .sidebar-btn i {
-      color: #ffffff;
-    }
-    
-    .btn-flex{
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-    }
-    
-    .footer-flex {
-      display: flex;
-      direction: row;
-      justify-content: space-between;
-      align-items: center;
-    }
-    
-    .icons-flex {
-      display: flex;
-    }
-      
-    .square {
-      margin-right: 10px;
-    }
-    
-    a .square {
-      color: #333;
-    }
-    
-    a .square:hover {
-      color: #6291D0;
-    }
-    
-    /* 
-      The fontawesome instagram square icon doesn't work
-      We can make our own square icon with the help of CSS
-    */
-    .insta-box {
-      margin-top: 2px;
-      color: #fff;
-      background-color: #333;
-      width: 43px;
-      height: 43px;
-      border-radius: 3px;
-    }
-    
-    a .insta-box:hover {
-      background-color: #6291D0;
-    }
-    
-    .insta {
-      color: #fff;
-      margin: 5px 0 0 7.5px;
-    }
+.box4 {
+    grid-column: 1/4;
+    grid-row: 5;
+    padding: 10px;
+    border-top: 60px solid #333;
+}
+
+.last-container {
+  grid-column: 1/4;
+  grid-row: 6;
+  padding: 10px;
+  border-top: 60px solid #333;
+  margin-bottom: 10px;
+}
+
+.last-flex {
+  display: flex;
+  direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.last:hover {
+  background-color: #6291D0;
+}
