--- a/home.css
+++ b/home.css
@@ -1,11 +1,11 @@
-/* .grid-container { 
+.grid-container { 
     display: grid;
-    grid-template-rows: 2fr 1fr 5fr 4fr;
+    grid-template-rows: 3fr 2fr 3fr 3fr 3fr 5fr;
     grid-template-columns: 1fr;
     height: 90vh;
     width: 100%;
   }
-*/
+
 
 body {
     margin: 0;
@@ -17,10 +17,23 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        background: #fff;
+        background: #f4efef;
         margin-left: 10px;
-        background-color: rgb(231, 229, 229);
+        background-color: #f4efef;
     }
+
+.top-container{
+    display: flex;
+    grid-column: 1/1;
+    grid-row: 1;
+    width: 100%;
+    height: 75px;
+    background-color: #f4efef;
+    overflow: auto;
+    margin-bottom: 15px;
+    justify-content: center;
+    text-align: center;  
+}
 
     h1 {
       font-family: 'Fredericka the Great', cursive;
@@ -34,6 +47,7 @@ body {
     grid-column: 1/1;
     grid-row: 2;
     width: 100%;
+    height: 50px;
     background-color: #3f3f3f;
     overflow: auto;
     margin-bottom: 15px;
@@ -49,10 +63,11 @@ body {
     color: white;
     text-decoration: none;
     font-size: 17px;
+    width: 8%;
   }
   
   .navbar a:hover {
-    background-color: #6291D0;
+    background-color: #45bee0;
   }
   
     /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
@@ -62,50 +77,29 @@ body {
       display: center;
     }
   }
-    
-    /* IMAGE SLIDESHOW  */
-    .slider {
-        position: relative;
-        width: 60%;
-        overflow: hidden;
-    }
-    .images {
-        display: flex;
-        width: 100%;
-    }
-    .images img {
-        height: 400px;
-        width: 100%;
-        transition: all 0.15s ease;
-    }
-    .images input {
-        display: none;
-    }
-    .dots {
-        display: flex;
-        justify-content: center;
-        margin: 5px;
-    }
-    .dots label {
-        height: 20px;
-        width: 20px;
-        border-radius: 50%;
-        border: solid black 3px;
-        cursor: pointer;
-        transition: all 0.15s ease;
-        margin: 5px;
-    }
-    .dots label:hover {background: black;}
+.picrow1{
+    display: flex;
+    grid-column: 1/1;
+    grid-row: 3;
+}
 
-    #img1:checked ~ .m1 {
-        margin-left: 0;
-    }
-    #img2:checked ~ .m2 {
-        margin-left: -100%;
-    }
-    #img3:checked ~ .m3 {
-        margin-left: -200%;
-    }
-    #img4:checked ~ .m4 {
-        margin-left: -300%;
-    }
+.picrow2{
+    display: flex;
+    grid-column: 1/1;
+    grid-row: 4;
+}
+
+.picrow3{
+    display: flex;
+    grid-column: 1/1;
+    grid-row: 5;
+}
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+img {
+    max-width: 100%;
+    height: auto;
+  }
