--- a/style.css
+++ b/style.css
@@ -1,58 +1,105 @@
-/* Style the navigation bar */
-.navbar {
-    width: 100%;
-    background-color: #3f3f3f;
-    overflow: auto;
-  }
-  
-  /* Navbar links */
-  .navbar a {
-    float: left;
-    text-align: center;
-    padding: 12px;
-    color: white;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Navbar links on mouse-over */
-  .navbar a:hover {
-    background-color: #6291D0;
-  }
-  
-    /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
-  @media screen and (max-width: 500px) {
-    .navbar a {
-      float: none;
-      display: block;
-    }
-  }
+.grid-container { 
+  display: grid;
+  grid-template-rows: 3fr 2fr 3fr 3fr 3fr 5fr;
+  grid-template-columns: 1fr;
+  height: 90vh;
+  width: 100%;
+}
 
-.main-section-1 {
-    background-image: url(Assets/IMG_8644.JPG);
-    margin: 20px;
-    padding: 100px;
-    width: auto;
-    height: 150px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    }
- 
-    .main-section-2 {
-      background-image: url(Assets/IMG_8644.JPG);
-      margin: 20px;
-      padding: 100px;
-      width: auto;
-      height: 150px;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      
-      }
 
 body {
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    }
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  }
+
+body {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #f4efef;
+      margin-left: 10px;
+      background-color: #f4efef;
+  }
+
+.top-container{
+  display: flex;
+  grid-column: 1/1;
+  grid-row: 1;
+  width: 100%;
+  height: 75px;
+  background-color: #f4efef;
+  overflow: auto;
+  margin-bottom: 15px;
+  justify-content: center;
+  text-align: center;  
+}
+
+  h1 {
+    font-family: 'Fredericka the Great', cursive;
+    text-align: center;
+    font-weight: 400;
+  }
+
+/* Style the navigation bar */
+.navbar {
+display: flex;
+  grid-column: 1/1;
+  grid-row: 2;
+  width: 100%;
+  height: 50px;
+  background-color: #3f3f3f;
+  overflow: auto;
+  margin-bottom: 15px;
+  justify-content: center;
+  text-align: center;
+}
+
+/* Navbar links */
+.navbar a {
+  float:left;
+  text-align: center;
+  padding: 12px;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+  width: 8%;
+}
+
+.navbar a:hover {
+  background-color: #45bee0;
+}
+
+  /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
+@media screen and (max-width: 500px) {
+  .navbar a {
+    float: none;
+    display: center;
+  }
+}
+.picrow1{
+  display: flex;
+  grid-column: 1/1;
+  grid-row: 3;
+}
+
+.picrow2{
+  display: flex;
+  grid-column: 1/1;
+  grid-row: 4;
+}
+
+.picrow3{
+  display: flex;
+  grid-column: 1/1;
+  grid-row: 5;
+}
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
