--- a/me/MECSS.css
+++ b/me/MECSS.css
@@ -93,9 +93,10 @@ body {
     color: #ffffff;
     /* margin-top: 15px; */
     width: 200px;
-    height: 60px;
+    height: 45px;
     font-size: 18px;
     cursor: pointer;
+    border-radius: 3px;
   }
 
 .sidebar-btn:hover {
@@ -176,7 +177,8 @@ body {
     border-radius: 10px;
     margin: 5px;
     margin-bottom: 30px;
-    padding-top: 20px;
+    padding-top: 45px;
+    
 }
 
 .box2 {
@@ -245,4 +247,8 @@ h4 {
 .nav-link:hover {
   color: #6291D0;
   letter-spacing: 2px;
+}
+
+.last {
+  color: #333;
 }
