--- a/fun.css
+++ b/fun.css
@@ -2,8 +2,7 @@ body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     }
-  
-  
+    
 .grid-container {
     display: grid;
     grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
@@ -15,13 +14,15 @@ body {
 .header-container {
     grid-column: 1/4;
     grid-row: 1;
-    padding: 12px;
+    padding-top: 12px;
 }
     
 .fundisc {
     grid-column: 1/4;
     grid-row: 2;
-    padding: 12px; 
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px;
 }
 
 .center {
@@ -30,24 +31,44 @@ body {
     margin-right: auto;
     width: 80%;
 }
-    
-.header-flex {
+  
+/* Style the navigation bar */
+.navbar {
     display: flex;
-    justify-content: end;
-    align-items: center;
-    padding-top: 20px;
-}
-    
-nav a {
-    font-size: 20px;
-    color: #333;
-    font-weight: bold;
-    margin: 0 20px;
-}
-    
-a {
+      grid-column: 1/1;
+      grid-row: 2;
+      width: 100%;
+      height: 50px;
+      background-color: #3f3f3f;
+      overflow: auto;
+      margin-bottom: 15px;
+      justify-content: center;
+      text-align: center;
+    }
+
+/* Navbar links */
+.navbar a {
+    float:left;
+    text-align: center;
+    padding: 12px;
+    color: white;
     text-decoration: none;
-    }  
+    font-size: 17px;
+    width: 8%;
+  }
+  
+  .navbar a:hover {
+    background-color: #45bee0;
+  }
+  
+    /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
+  @media screen and (max-width: 500px) {
+    .navbar a {
+      float: none;
+      display: center;
+    }
+  }
+
    
 .box1 {
     grid-column: 1/1;
@@ -59,14 +80,14 @@ a {
 .box2 {
     grid-column: 2/2;
     grid-row: 3;
-    /* padding: 20px; */
+    padding-right: 20px;
     background-color: #f4efef;
 } 
 
 .box3 {
     grid-column: 1/1;
     grid-row: 4;
-    padding: 20px;
+    padding-left: 20px;
     background-color: #fff;
 } 
 
@@ -87,7 +108,7 @@ a {
 .box6 {
     grid-column: 2/2;
     grid-row: 5;
-    padding: 20px;
+    padding-right: 20px;
     background-color: #f4efef;
 } 
 
@@ -105,16 +126,77 @@ a {
     background-color: #fff;
 } 
 
+.box9 {
+    grid-column: 1/1;
+    grid-row: 7;
+    padding: 20px;
+    background-color: #f4efef;
+}   
 
-  
-  .nested {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-content: center;
-    align-items: center;
-  }
-    
-  h4 { 
+.box10 {
+    grid-column: 2/2;
+    grid-row: 7;
+    padding-right: 20px;
+    background-color: #f4efef;
+} 
+
+.box11 {
+    grid-column: 1/1;
+    grid-row: 8;
+    padding: 20px;
+    background-color: #fff;
+} 
+
+.box12 {
+    grid-column: 2/2;
+    grid-row: 8;
+    padding: 20px;
+    background-color: #fff;
+} 
+
+.box13 {
+    grid-column: 1/1;
+    grid-row: 9;
+    padding: 20px;
+    background-color: #f4efef;
+} 
+
+.box14 {
+    grid-column: 2/2;
+    grid-row: 9;
+    padding: 20px;
+    background-color: #f4efef;
+} 
+
+.box15 {
+    grid-column: 1/1;
+    grid-row: 10;
+    padding: 20px;
+    background-color: #fff;
+} 
+
+.box16 {
+    grid-column: 2/2;
+    grid-row: 10;
+    padding: 20px;
+    background-color: #fff;
+} 
+
+.box17 {
+    grid-column: 1/1;
+    grid-row: 11;
+    padding: 20px;
+    background-color: #f4efef;
+} 
+
+.box18 {
+    grid-column: 2/2;
+    grid-row: 11;
+    padding: 20px;
+    background-color: #f4efef;
+} 
+
+h4 { 
     border-bottom: #333 2px solid;
     /* padding: 1em; */
     text-align: start;
