--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     text-align: center;
     font-weight: 400;
     margin-right: 20px;
+    max-width: 500px
   }
 
 /* Style the navigation bar */
