me and fun pages

--- a/fun.css
+++ b/fun.css
@@ -187,6 +187,8 @@ body {
     grid-row: 11;
     padding: 20px;
     background-color: #f4efef;
+    /* width: 50%;
+    height: auto; */
 } 
 
 .box18 {
