--- a/MECSS.css
+++ b/MECSS.css
@@ -23,9 +23,8 @@ body {
     grid-column: 1/2;
     grid-row: 2;
     height: 70vh;
-    /* background-image: url(../Assets/fakepic.JPG); */
-    /* background-size: cover; */
-    margin: 10px;
+    margin-right: 90px;
+    margin-left: 90px;
     padding: 10px;
   }
 
@@ -78,7 +77,6 @@ body {
     font-size: 20px;
     line-height: 15px;
     color: #333;
-    padding-left: 30px;
     margin-top: 50px;
     margin-bottom: 50px;
   }
@@ -91,7 +89,6 @@ body {
   .sidebar-btn {
     background-color: #333;
     color: #ffffff;
-    /* margin-top: 15px; */
     width: 200px;
     height: 45px;
     font-size: 18px;
@@ -241,14 +238,14 @@ h4 {
 }
 
 .last:hover {
-  background-color: #6291D0;
-}
-
-.nav-link:hover {
   color: #6291D0;
   letter-spacing: 2px;
 }
 
 .last {
   color: #333;
+}
+
+h3 {
+  margin-bottom: 30px;
 }
