--- a/fun.css
+++ b/fun.css
@@ -191,6 +191,16 @@ body {
     height: auto; */
 } 
 
+.smaller-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+    height: auto;
+    justify-content: center;
+    margin: auto;
+}
+
 .box18 {
     grid-column: 2/2;
     grid-row: 11;
